# Urban_Forecast

./: LICENSE  README.md  iindex.html  index.html  index2.html  script.js  sketch.ino  style.css  teste.html
.github/workflows/: joss-paper.yml  tests.yml
Apps_Script/: Codigo.js  README.md  alerta.js  apaga.js  scriptDesacoplado.js
Arquivos ino/: antigo.ino  sketch.ino
ai-service/: app.py  requirements.txt
paper/: paper.bib  paper.md
urban-forecast-api/: README.md  pyproject.toml  requirements.txt
urban-forecast-api/api/: app.py
urban-forecast-api/connectors/: supabase.py
urban-forecast-api/examples/: example.py
urban-forecast-api/experiments/: benchmark.py  dataset.csv  example_usage.py  main.py  new_test.py  real_benchmark.py  results.csv  sensor_results.csv  v_distancias_com_fill_rows.csv  v_distancias_com_fill_rows_100.csv
urban-forecast-api/tests/: reached_limit.py  test_ai.py  test_baseline.py  test_baseline_prediction_accuracy.py  test_edge_cases.py  test_models.py  test_regression.py  test_regression_prediction_accuracy.py
urban-forecast-api/tests/data/: sample_baseline_data.csv  sample_regression_data.csv
urban-forecast-api/urban_forecast/: baseline.py  core.py  ia.py  models.py  pipeline.py  regression.py
urban-forecast/connectors/: supabase.py
urban-forecast/examples/: example.py
urban-forecast/tests/: test_forecast.py
urban-forecast/urban_forecast/: core.py  pipeline.py
