[project]
name = "urban-forecast"
version = "0.1.0"
description = "Time series forecasting pipeline for sensor-based systems"
authors = [
    { name = "Gabriel Bianchi" }
]
dependencies = [
    "pandas",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]