[project]
name = "urban-forecast"
version = "0.1.0"
description = "Time series forecasting pipeline for sensor-based systems"
authors = [
    { name = "Gabriel Bianchi" }
]
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "groq>=0.9"
]

[project.optional-dependencies]
api = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "gunicorn>=21.2"
]
dev = [
    "pytest>=7.4",
    "matplotlib>=3.7"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]